WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122115
Don't attempt to destroy decoded frame if a BitmapImage doesn't have encoded raw data.
https://bugs.webkit.org/show_bug.cgi?id=122115
Summary
Don't attempt to destroy decoded frame if a BitmapImage doesn't have encoded ...
Yongjun Zhang
Reported
2013-09-30 12:01:25 PDT
With BitmapImage::create(PassNativeImagePtr, ImageObserver*), a BitmapImage could be created by passing a native image. If this image is added to memory cache, we shouldn't attempt to destroy its decoded frames since there is no encoded raw data and we won't be able to reconstruct the image again.
Attachments
Patch.
(1.97 KB, patch)
2013-09-30 12:32 PDT
,
Yongjun Zhang
dbates
: review+
Details
Formatted Diff
Diff
Address review comments.
(2.00 KB, patch)
2013-09-30 14:00 PDT
,
Yongjun Zhang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yongjun Zhang
Comment 1
2013-09-30 12:32:29 PDT
Created
attachment 213021
[details]
Patch.
Daniel Bates
Comment 2
2013-09-30 13:47:23 PDT
Comment on
attachment 213021
[details]
Patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=213021&action=review
> Source/WebCore/ChangeLog:7 > + passing a native image. If this image is added to memory cache, we shouldn't attempt to destroy
Nit: "added to memory cache" => "added to the memory cache"
> Source/WebCore/ChangeLog:10 > + Reviewed by NOBODY (OOPS!).
Nit: This line should come after the bug URL.
> Source/WebCore/ChangeLog:13 > + No new tests for now. Currently there is no code patch to add an BitmapImage created by native image > + to memory cache, we will add this in future.
The second sentence doesn't read well. Maybe: Currently there isn't a code path to add to the memory cache a BitmapImage that was created by adopting a native image. We'll add such a code path in a subsequent patch.
Yongjun Zhang
Comment 3
2013-09-30 14:00:31 PDT
Created
attachment 213034
[details]
Address review comments.
WebKit Commit Bot
Comment 4
2013-09-30 14:53:01 PDT
Comment on
attachment 213034
[details]
Address review comments. Clearing flags on attachment: 213034 Committed
r156681
: <
http://trac.webkit.org/changeset/156681
>
WebKit Commit Bot
Comment 5
2013-09-30 14:53:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug